added user and video modal

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 CORS_ORIGIN=*
 MONGODB_URI=mongodb+srv://<your-user-name>:<your-password>@cluster0.15x8g.mongodb.net
+ACCESS_TOKEN_SECRET=your-sceret
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=your-sceret
+REFRESH_TOKEN_EXPIRY=10d 
